Normalize channel names and types according to OH coding standards Usage of system defined channel types Usage of UoM channels
Signed-off-by: clinique <gael@lhopital.org>